--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/firebase": "^3.2.1",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-lottie": "^1.2.6",
+    "axios": "^0.24.0",
     "firebase": "^7.14.2",
     "framer-motion": "^4",
     "next": "12.0.7",
