--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@firebase/app": "^0.7.11",
+    "@netlify/plugin-nextjs": "^4.0.0",
     "@types/firebase": "^3.2.1",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-lottie": "^1.2.6",
